# large_json_case

./: .gitignore  1.py  README.md  main.py  pyproject.toml  script.py
scripts/: processor.py
