[tool.poetry]
name = "json-proccesor"
version = "0.1.0"
description = ""
authors = ["Ruslan Akhmetshin <sccrsccr1@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.8.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
json-processor = "scripts.processor:json_processor_runner"